# xymon

./: .gitignore  AGENTS.md  ARCHITECTURE-EXPLORATION.md  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  analyze-make-build.sh  cmake-local-build.sh  cmake-local-install.sh  cmake-local-setup.sh  cmake-local.sh  config.h.in  configure.client  configure.cmake.sh  configure.server  create-docker-debian-family.sh
client/: CMakeLists.txt  Makefile
common/: CMakeLists.txt  Makefile  xymon.c  xymongrep.c
docs/: CMakeLists.txt  configure.cmake.txt  install.html  known-issues.html  menuconfig-spec.md
docs/architecture/loaders/: loadalerts.md  loadhosts.md
docs/cmake-legacy-migration/: 00-INDEX.md  10-PLAN.md  20-RUNBOOK.md  30-REFERENCE.md  40-STATUS.md  README.md  STATUS-HISTORY.md  legacy.freebsd.ref  legacy.freebsd.server.ref  legacy.linux.localclient.ref  legacy.linux.server.ref  legacy.netbsd.ref  legacy.netbsd.server.ref  legacy.openbsd.ref  legacy.openbsd.server.ref  legacy.ref
docs/cmake-legacy-migration/refs/: legacy.freebsd.client.keyfiles.tgz  legacy.freebsd.localclient.binlinks  legacy.freebsd.localclient.keyfiles.tgz  legacy.freebsd.localclient.perms  legacy.freebsd.ref  legacy.freebsd.server.binlinks  legacy.freebsd.server.keyfiles.sha256  legacy.freebsd.server.keyfiles.tgz  legacy.linux.client.keyfiles.sha256  legacy.linux.client.keyfiles.tgz  legacy.linux.client.perms  legacy.linux.localclient.keyfiles.sha256  legacy.linux.localclient.keyfiles.tgz  legacy.linux.localclient.perms  legacy.linux.server.binlinks  legacy.linux.server.keyfiles.sha256  legacy.linux.server.keyfiles.tgz  legacy.linux.server.perms  legacy.linux.server.symlinks  legacy.netbsd.client.keyfiles.sha256  legacy.netbsd.client.keyfiles.tgz  legacy.netbsd.client.perms  legacy.netbsd.localclient.binlinks  legacy.netbsd.localclient.keyfiles.tgz  legacy.netbsd.ref  legacy.netbsd.server.binlinks  legacy.netbsd.server.keyfiles.sha256  legacy.netbsd.server.keyfiles.tgz  legacy.openbsd.client.binlinks  legacy.openbsd.client.keyfiles.tgz  legacy.openbsd.client.perms  legacy.openbsd.localclient.keyfiles.sha256  legacy.openbsd.localclient.keyfiles.tgz  legacy.openbsd.ref  legacy.openbsd.server.binlinks  legacy.openbsd.server.keyfiles.sha256  legacy.openbsd.server.keyfiles.tgz
docs/cmake-legacy-migration/refs/make_freebsd/client/: inventory.tsv  perms  ref
docs/cmake-legacy-migration/refs/make_freebsd/localclient/: binlinks  inventory.tsv  needed.norm.tsv  perms  ref
docs/cmake-legacy-migration/refs/make_freebsd/server/: binlinks  inventory.tsv  keyfiles.sha256  needed.norm.tsv  owners.group  owners.idmap.tsv  perms  ref
docs/cmake-legacy-migration/refs/make_linux/client/: binlinks  inventory.tsv  keyfiles.sha256  owners.group  perms
docs/cmake-legacy-migration/refs/make_linux/client/meta/: config.defines
docs/cmake-legacy-migration/refs/make_linux/client/var/lib/xymon/etc/: xymonclient.cfg
docs/cmake-legacy-migration/refs/make_linux/localclient/: inventory.tsv  needed.norm.tsv  owners.idmap.tsv  owners.passwd  perms  ref
docs/cmake-legacy-migration/refs/make_linux/server/: binlinks  embedded.paths  inventory.tsv  keyfiles.sha256  needed.norm.tsv  owners.group  owners.idmap.tsv  owners.passwd  perms  ref  symlinks
docs/cmake-legacy-migration/refs/make_linux/server/include/: config.h
docs/cmake-legacy-migration/refs/make_linux/server/var/lib/xymon/server/etc/: hosts.cfg  (+2 more)
docs/cmake-legacy-migration/refs/make_netbsd/client/: inventory.tsv  owners.group  owners.idmap.tsv  owners.passwd  perms
docs/cmake-legacy-migration/refs/make_netbsd/client/meta/: config.h
docs/cmake-legacy-migration/refs/make_netbsd/localclient/: inventory.tsv  keyfiles.sha256  needed.norm.tsv  perms  ref
docs/cmake-legacy-migration/refs/make_netbsd/localclient/meta/: config.defines
docs/cmake-legacy-migration/refs/make_netbsd/server/: binlinks  inventory.tsv  keyfiles.sha256  needed.norm.tsv  owners.group  owners.idmap.tsv  owners.passwd  perms  ref  symlinks
docs/cmake-legacy-migration/refs/make_openbsd/client/: inventory.tsv  owners.group  owners.idmap.tsv  perms  ref
docs/cmake-legacy-migration/refs/make_openbsd/localclient/: binlinks  inventory.tsv  needed.norm.tsv  perms
docs/cmake-legacy-migration/refs/make_openbsd/server/: binlinks  inventory.tsv  keyfiles.sha256  needed.norm.tsv  owners.group  owners.idmap.tsv  perms
docs/cmake-legacy-migration/refs/ref-make-freebsd/ref_make_freebsd-localclient/: perms
docs/cmake-legacy-migration/refs/ref-make-freebsd/ref_make_freebsd-server/: keyfiles.sha256  ref
docs/cmake-legacy-migration/refs/ref-make-linux/ref_make_linux-client/: embedded.paths  ref
docs/cmake-legacy-migration/refs/ref-make-linux/ref_make_linux-server/: ref
docs/cmake-legacy-migration/refs/ref-make-netbsd/ref_make_netbsd-localclient/: binlinks  perms
docs/cmake-legacy-migration/refs/ref-make-openbsd/ref_make_openbsd-client/: perms
docs/cmake-legacy-migration/refs/ref-make-openbsd/ref_make_openbsd-server/: perms  ref
docs/legacy/: 00-INDEX.md  10-PLAN.md  20-RUNBOOK.md  30-REFERENCE.md  40-STATUS.md  README.md
lib/: CMakeLists.txt  Makefile  acklog.c  acknowledgementslog.c  availability.c  availability.h  cgiurls.h  environ.c  eventlog.c  headfoot.c  htmllog.c  ipaccess.c  loadalerts.c  loadalerts.h  loadcriticalconf.c  loadhosts.c  locator.c  matching.c  matching.h  netservices.c  notifylog.c  osdefs.c  osdefs.h  reportlog.c  reportlog.h  run.c  sendmsg.c  webaccess.c  xymon_availability.h  xymond_buffer.c  xymond_ipc.c
lib/server_loaders/: loadalerts.c
server/: CMakeLists.txt
web/: CMakeLists.txt  Makefile  perfdata.c  showgraph.c
xymond/: CMakeLists.txt  Makefile  client_config.c  do_alert.c  do_rrd.c  xymon-mailack.c  xymond.c  xymond_capture.c
xymond/client/: irix.c
xymond/rrd/: do_dbcheck.c  do_disk.c  do_la.c  do_netapp.c
xymongen/: CMakeLists.txt  Makefile  loaddata.c  loadlayout.c  pagegen.c  xymongen.c
xymonnet/: CMakeLists.txt  Makefile  beastat.c  contest.c  dns.c  dns2.c  httpresult.c  httptest.c  xymonnet.c
xymonproxy/: CMakeLists.txt  Makefile
(+130 files in other folders)
